update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
 /web/archivos/
 /web/bundles/
-/var/bootstrap.php.cache
+/web/uploads/*
+
+!/var/cache
 /var/cache/*
+
+!/var/logs
 /var/logs/*
 /app/config/parameters.yml
 /build/
+!var/SymfonyRequirements.php
 /vendor/
-/bin/
-/composer.phar
-/src/Acme/*
-/nbproject/*
-/nbproject/private/
 /.vscode/
 /.idea/
 
-app/config/deploy.rb
-
-web/uploads/*
-
-nbproject/private/private.xml
-
-web/uploads
