--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,7 +10,7 @@ security:
             entity: { class: Admin\UserBundle\Entity\User, property: username }
 
     firewalls:
-                   
+
         dev:
 #           pattern:  ^/
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
@@ -20,7 +20,7 @@ security:
             pattern:  ^/login$
             anonymous:  ~
             security: false
-       
+
         home:
             pattern: ^/home$
             anonymous: ~
@@ -36,17 +36,17 @@ security:
                 login_path: /login
                 check_path: /login_check
                 default_target_path: /home/inicio
-          
+
             logout:
                 path: /logout
                 target: /
+            logout_on_user_change: true
 
     access_control:
-      - { path: ^/home, roles: ROLE_USER }   
+      - { path: ^/home, roles: ROLE_USER }
       - { path: ^/admin, roles: ROLE_ADMIN }
       - { path: ^/admon, roles: [ROLE_ADMIN, ROLE_ADMON] }
       - { path: ^/doc, roles: [ROLE_DOC, ROLE_ADMIN] }
       - { path: ^/dec, roles: ROLE_DEC }
       - { path: ^/unad, roles: [ROLE_DEC, ROLE_ADMIN, ROLE_DOC, ROLE_SECA, ROLE_ADMON, ROLE_AVAL] }
       - { path: ^/aval, roles: [ROLE_DEC, ROLE_DIRZ, ROLE_ADMON] }
-       
