--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "gedmo/doctrine-extensions": "^2.4",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/distribution-bundle": "^5.0.19",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "symfony/apache-pack": "^1.0"
     },
     "scripts": {
         "post-install-cmd": [
