--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,7 +35,7 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
-                default_target_path: /home/inicio
+                default_target_path: /home/periodo
 
             logout:
                 path: /logout
