--- a/src/Admin/MedBundle/Resources/config/routing.yml
+++ b/src/Admin/MedBundle/Resources/config/routing.yml
@@ -8,55 +8,55 @@ _accionespm:
 _redtutores:
     resource: "@AdminMedBundle/Controller/redTutoresController.php"
     type:     annotation
-    
+
 _plangestion:
     resource: "@AdminMedBundle/Controller/PlangestionController.php"
     type:     annotation
-    
+
 _actividadesrol:
     resource: "@AdminMedBundle/Controller/ActividadrolController.php"
-    type:     annotation   
+    type:     annotation
 
 _rolacedemico:
     resource: "@AdminMedBundle/Controller/RolacademicoController.php"
-    type:     annotation       
+    type:     annotation
 
 _actividadplang:
     resource: "@AdminMedBundle/Controller/ActividadplangController.php"
     type:     annotation
-    
+
 _rolplang:
     resource: "@AdminMedBundle/Controller/RolplangController.php"
-    type:     annotation     
-    
+    type:     annotation
+
 _coevaltutor:
     resource: "@AdminMedBundle/Controller/coevalTutorController.php"
-    type:     annotation        
+    type:     annotation
 
 _coevalpares:
     resource: "@AdminMedBundle/Controller/coevalParesController.php"
-    type:     annotation     
+    type:     annotation
 
 _coevaldirector:
     resource: "@AdminMedBundle/Controller/coevalDirectorController.php"
-    type:     annotation   
+    type:     annotation
 
 _coevallider:
     resource: "@AdminMedBundle/Controller/coevalLiderController.php"
     type:     annotation
-    
+
 _avales:
     resource: "@AdminMedBundle/Controller/AvalplangController.php"
     type:     annotation
 
 _archivo:
     resource: "@AdminMedBundle/Controller/ArchivoController.php"
-    type:     annotation        
+    type:     annotation
 
 _instrumento:
     resource: "@AdminMedBundle/Controller/InstrumentoController.php"
     type:     annotation
-    
+
 _formato:
     resource: "@AdminMedBundle/Controller/formatoPlangController.php"
     type:     annotation
@@ -64,51 +64,51 @@ _formato:
 _plangpdf:
     resource: "@AdminMedBundle/Controller/pdfPlangController.php"
     type:     annotation
-    
+
 _base:
     resource: "@AdminMedBundle/Controller/BaseController.php"
     type:     annotation
-    
+
 _consolidar:
     resource: "@AdminMedBundle/Controller/ConsolidarController.php"
     type:     annotation
 
 _hetero:
     resource: "@AdminMedBundle/Controller/HeteroController.php"
-    type:     annotation   
+    type:     annotation
 
 _dofe:
     resource: "@AdminMedBundle/Controller/DofeController.php"
-    type:     annotation  
-    
+    type:     annotation
+
 _productividad:
     resource: "@AdminMedBundle/Controller/ProductividadController.php"
-    type:     annotation  
+    type:     annotation
 
 accionespm_editdoc:
     path:  /doc/planm/acc/{id}/edit
     defaults: { _controller: "AdminMedBundle:Accionespm:editdoc" }
-    
+
 planmejoramiento_doc:
     path: /doc/planm/{id}
     defaults: { _controller: "AdminMedBundle:Planmejoramiento:doc" }
- 
+
 plangestion_info:
     path:  /unad/doc/{id}/plan
     defaults: { _controller: "AdminMedBundle:Plangestion:info" }
 
 plangestion_autoeval:
     path:  /unad/doc/{id}/autoeval
-    defaults: { _controller: "AdminMedBundle:Plangestion:autoeval" }  
-    
+    defaults: { _controller: "AdminMedBundle:Plangestion:autoeval" }
+
 redtutores_info:
     path:  /unad/doc/{id}/redtutor
     defaults: { _controller: "AdminUnadBundle:Docente:redtutoresinfo" }
-    
+
 coeval_info:
     path:  /unad/doc/{id}/coeval
     defaults: { _controller: "AdminUnadBundle:Docente:coevalinfo" }
 
 user_info:
     path:  /unad/user/{id}/info
-    defaults: { _controller: "AdminUserBundle:User:show" }
+    defaults: { _controller: "AppBundle:User:show" }
