--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 _welcome:
     path:  /
-    defaults: { _controller: AdminUserBundle:Default:home }
+    defaults: { _controller: AppBundle:Default:home }
 
 admin_med:
     resource: "@AdminMedBundle/Resources/config/routing.yml"
@@ -11,15 +11,15 @@ admin_unad:
     prefix:   /
 
 admin_user:
-    resource: "@AdminUserBundle/Resources/config/routing.yml"
+    resource: "@AppBundle/Resources/config/routing.yml"
     prefix:   /
 
 login:
     path: /login
-    defaults: { _controller: AdminUserBundle:Security:login }
- 
+    defaults: { _controller: AppBundle:Security:login }
+
 login_check:
     path: /login_check
- 
+
 logout:
     path: /logout
