--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
         "symfony/symfony": "^3.4",
         "doctrine/orm": "^2.5.11",
         "doctrine/doctrine-bundle": "^1.6.10",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~3.1",
+        "symfony/swiftmailer-bundle": "^2.6.4",
+        "symfony/monolog-bundle": "^3.1.0",
         "gedmo/doctrine-extensions": "^2.4",
-        "sensio/framework-extra-bundle": "~3.0",
+        "sensio/framework-extra-bundle": "^5.0.0",
         "sensio/distribution-bundle": "^5.0.19",
         "incenteev/composer-parameter-handler": "~2.0",
         "symfony/apache-pack": "^1.0"
