--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,11 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
 
+
+sensio_framework_extra:
+    router:
+        annotations: false
+
 framework:
     #esi:             ~
     #translator:      { fallback: "%locale%" }
@@ -59,7 +64,7 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
-        
+
         mappings:
             translatable:
                 type: annotation
