--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,4 +78,4 @@ swiftmailer:
     transport:  gmail
     host:       smtp.gmail.com
     username:   'siga@unad.edu.co'
-    password:   'Unad123456#'
+    password:   'Unad152715*'
