--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,4 +1,14 @@
 services:
+  _defaults:
+    autowire: true
+    autoconfigure: true
+    public: false
+    bind:
+      $projectDir: '%kernel.project_dir%'
+
+  AppBundle\:
+    resource: '../../src/AppBundle/*'
+    exclude: '../../src/AppBundle/{DependencyInjection,Entity,Tests}'
 
   AppBundle\Service\FileUploader:
     arguments:
