--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,18 +1,25 @@
+# This file is auto-generated during the composer install
 parameters:
-    database_driver:   pdo_mysql
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
-
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
-
-    locale:            en
-    secret:            ThisTokenIsNotSoSecretChangeIt
-
-
-    appmed.periodo: "20161"
+    database_driver: pdo_mysql
+    database_host: mysqlweb.unad.edu.co
+    database_port: 3306
+    database_name: evaluacion_docente
+    database_user: evaluacion.docen
+    database_password: '$&.!3V4l84c10N#D0c3Nt3.!&'
+    mailer_transport: gmail
+    mailer_host: smtp.gmail.com
+    mailer_user: siga@unad.edu.co
+    locale: en
+    secret: ThisTokenIsNotSoSecretChangeIt
+    appmed.periodo: '20237'
+    appmed.year: '2023'
+    appmed.semestre: '20241'
+    appmed.periodos:
+        - '20231'
+        - '20232'
+        - '20233'
+        - '20234'
+        - '20235'
+        - '20236'
+        - '20237'
+    mailer_password: q
