--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,12 @@
 /vendor/
 /.vscode/
 /.idea/
-
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
