--- a/composer.json
+++ b/composer.json
@@ -11,42 +11,70 @@
     },
     "require": {
         "php": "^7.2",
-        "symfony/symfony": "^4.0",
-        "doctrine/orm": "^2.5.11",
         "doctrine/doctrine-bundle": "^1.6.10",
-        "symfony/swiftmailer-bundle": "^3.0",
-        "symfony/monolog-bundle": "^3.1.0",
+        "doctrine/orm": "^2.5.11",
         "gedmo/doctrine-extensions": "^2.4",
-        "sensio/framework-extra-bundle": "^5.0.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "symfony/apache-pack": "^1.0"
+        "sensio/framework-extra-bundle": "^5.0.0",
+        "symfony/apache-pack": "^1.0",
+        "symfony/asset": "4.4.*",
+        "symfony/console": "^4.0",
+        "symfony/dotenv": "^4.0",
+        "symfony/flex": "^1.0",
+        "symfony/form": "4.4.*",
+        "symfony/framework-bundle": "^4.0",
+        "symfony/monolog-bundle": "^3.1.0",
+        "symfony/security-bundle": "4.4.*",
+        "symfony/swiftmailer-bundle": "^3.0",
+        "symfony/templating": "4.4.*",
+        "symfony/twig-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
+        "symfony/web-profiler-bundle": "4.4.*",
+        "symfony/yaml": "^4.0"
+    },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
     },
     "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
         "post-install-cmd": [
+            "@auto-scripts",
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
         ],
         "post-update-cmd": [
+            "@auto-scripts",
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
         ]
     },
     "config": {
-        "bin-dir": "bin"
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/flex": true
+        },
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
     },
 
+    "conflict": {
+        "symfony/symfony": "*"
+    },
     "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-assets-install": "relative",
+        "symfony": {
+            "allow-contrib": false,
+            "require": "4.4.*"
+        },
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
-        },
-        "branch-alias": {
-            "dev-master": "3.4-dev"
         }
-    },
-    "require-dev": {
-        "symfony/phpunit-bridge": "^7.0"
     }
 }
