--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/framework-bundle": "^4.0",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/security-bundle": "4.4.*",
+        "symfony/security-csrf": "4.4.*",
         "symfony/swiftmailer-bundle": "^3.0",
         "symfony/templating": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
