--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,6 +10,9 @@ security:
             anonymous: lazy
             provider: users_in_memory
 
+            remember_me:
+                secret: '%kernel.secret%'
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
