--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
         "symfony/flex": "^1.0",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "^4.0",
+        "symfony/google-mailer": "4.4.*",
+        "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/security-bundle": "4.4.*",
         "symfony/security-csrf": "4.4.*",
-        "symfony/swiftmailer-bundle": "^3.0",
         "symfony/templating": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
@@ -67,5 +68,8 @@
             "allow-contrib": false,
             "require": "4.4.*"
         }
+    },
+    "require-dev": {
+        "symfony/phpunit-bridge": "^7.0"
     }
 }
