--- a/config/packages/dev/framework.yaml
+++ b/config/packages/dev/framework.yaml
@@ -18,11 +18,11 @@ framework:
 
 parameters:
     database_driver: pdo_mysql
-    database_host: mysqlweb.unad.edu.co
+    database_host: localhost
     database_port: 3306
-    database_name: evaluacion_docente
-    database_user: evaluacion.docen
-    database_password: '$&.!3V4l84c10N#D0c3Nt3.!&'
+    database_name: evaluacion_docente17
+    database_user: root
+    database_password: root
     mailer_transport: gmail
     mailer_host: smtp.gmail.com
     mailer_user: siga@unad.edu.co
