--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,30 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.4.*",
+        "symfony/cache": "^4.3.4",
+        "symfony/config": "^4.4.3",
         "symfony/console": "^4.0",
+        "symfony/dependency-injection": "^4.4.18",
+        "symfony/doctrine-bridge": "^4.4.22",
         "symfony/dotenv": "^4.0",
+        "symfony/error-handler": "^4.4",
+        "symfony/event-dispatcher": "^4.4",
         "symfony/flex": "^1.0",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "^4.0",
         "symfony/google-mailer": "4.4.*",
+        "symfony/http-kernel": "^4.4",
         "symfony/mailer": "4.4.*",
+        "symfony/monolog-bridge": "~4.4",
         "symfony/monolog-bundle": "^3.1.0",
+        "symfony/routing": "4.4.*",
         "symfony/security-bundle": "4.4.*",
+        "symfony/security-core": "^4.4",
         "symfony/security-csrf": "4.4.*",
+        "symfony/security-guard": "^4.2",
+        "symfony/security-http": "^4.4",
         "symfony/templating": "4.4.*",
+        "symfony/twig-bridge": "^4.4",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
         "symfony/web-profiler-bundle": "4.4.*",
@@ -67,7 +80,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.4.*"
         }
     },
     "require-dev": {
