--- a/config/packages/prod/framework.yaml
+++ b/config/packages/prod/framework.yaml
@@ -7,11 +7,15 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: ~
-        cookie_secure: auto
-        cookie_samesite: lax
-
-    #esi: true
+        handler_id: session.handler.native_file
+        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+        # 2 Days lifetime (172800 seconds)
+        cookie_lifetime: 172800
+        cookie_secure: 'auto'
+        cookie_samesite: 'lax'
+        #storage_id: session.storage.mock_file
+        storage_factory_id: session.storage.factory.native
+        #esi: true
     fragments: true
     php_errors:
         log: true
