--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/mailer": "5.4.*",
         "symfony/monolog-bridge": "5.4.*",
         "symfony/monolog-bundle": "^3.1.0",
+        "symfony/password-hasher": "5.4.*",
         "symfony/routing": "5.4.*",
         "symfony/security-bundle": "5.4.*",
         "symfony/security-core": "5.4.*",
@@ -85,6 +86,7 @@
         }
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.43",
         "symfony/phpunit-bridge": "^7.0"
     }
 }
