--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -22,3 +22,7 @@ monolog:
             handler: deprecation
             max_level: info
             channels: [ "php" ]
+        syslog_handler:
+            type: syslog
+            # log error-level messages and higher
+            level: error
