--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,6 +47,6 @@ security:
         - { path: ^/admon, roles: [ROLE_ADMIN, ROLE_ADMON] }
         - { path: ^/doc, roles: [ROLE_DOC, ROLE_ADMIN] }
         - { path: ^/dec, roles: ROLE_DEC }
-        - { path: ^/unad, roles: [ROLE_DEC, ROLE_ADMIN, ROLE_DOC, ROLE_SECA, ROLE_ADMON, ROLE_AVAL] }
+        - { path: ^/unad, roles: [ROLE_DEC, ROLE_DIRC, ROLE_ADMIN, ROLE_DOC, ROLE_SECA, ROLE_ADMON, ROLE_AVAL] }
         - { path: ^/aval, roles: [ROLE_DEC, ROLE_DIRZ, ROLE_ADMON] }
         - { path: ^/lider, roles: ROLE_LP }
