--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
         }
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "doctrine/annotations": "*",
         "doctrine/common": "^3.0",
         "doctrine/doctrine-bundle": "^2.0",
-        "doctrine/orm": "^2.5.11",
+        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/orm": "^2.0",
         "doctrine/persistence": "^2.0",
         "gedmo/doctrine-extensions": "^3.0",
         "incenteev/composer-parameter-handler": "~2.0",
